# ai_foreigner_card_agent

./: .gitignore  Common.py  README.md  eval_check.ipynb  pyproject.toml  test.ipynb
best_sample/: best_agent_graph_alone.py  best_agent_graph_complete.py  best_multi_agent_mcp_alone.py  best_multi_agent_mcp_complete.py  parse_test.py
idea/: IDEA_v1.0.md  IDEA_v2.0.md  IDEA_v3.0.md  IDEA_v4.0.md
src/data/: eval_dataset_127.json  parsed.jsonl  sources.yaml
src/pipelines/: index.py  parse.py
src/rag/: answer.py  evaluate.py  reranker.py  retriever.py
