[project]
name = "agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "chromadb>=1.0.20",
    "datasets>=4.0.0",
    "flagembedding>=1.3.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.5",
    "mcp>=1.13.1",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.2",
    "ragatouille>=0.0.9.post2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
